# sm-codec

./: .gitignore  README.md  example.c  meson.build
include/: sm-codec.h
src/: decoder.c  encoder.c  meson.build
subprojects/: lol.wrap
